# Learning-Wasm

./: Cargo.toml
my_nextjs_app/: package.json
my_nextjs_app/src/app/: page.tsx
nextapp/: package-lock.json
pkg/: package.json  wasmtest.d.ts  wasmtest.js  wasmtest_bg.wasm  wasmtest_bg.wasm.d.ts
src/: lib.rs
